--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -110,15 +110,16 @@ FOOTER
             </div>
         </div>
     </section>
-
     
-    <section id="showcase" class="fade casestudy">
+    <section id="showcasevvv" class="fade casestudy">
         <div class="heading">
             <h2>Showcase</h2>
             <p>A showcase of smaller projects &amp; initiatives I have done in my free time.</p>
         </div>
         <div id="casestudy-pulse" class="col">
-            <span class="img"></span>
+            <div class="img-wrap">
+                <img src="assets/img/showcase-pulse.png" alt="">
+            </div>
             <div class="content">
                 <h3><a href="#" title="">Pulse Football</a></h3>
                 <p>Pulse Football was a Design Jam I did one evening with a collegue.<br />Visual & Information Hierachy were areas that became apparent as we brainstormed.</p>
@@ -127,7 +128,9 @@ FOOTER
     </section>
     <section id="showcase" class="fade casestudy">
         <div id="casestudy-adventure" class="col">
-            <span class="img"></span>
+            <div class="img-wrap">
+                <img src="assets/img/showcase-adventure.png" alt="">
+            </div>
             <div class="content">
                 <h3><a href="#" title="">Every Adventure</a></h3>
                 <p>I previously worked as a Product designer for an events company.<br class="dt-set" /> Every Adventure was one brand I created from concept through many iterations.</p>
@@ -137,7 +140,9 @@ FOOTER
     </section>
     <section id="showcase" class="fade casestudy">
         <div id="casestudy-corpjapan" class="col">
-            <span class="img"></span>
+            <div class="img-wrap">
+                <img src="assets/img/showcase-corpjapan.png" alt="">
+            </div>
             <div class="content">
                 <h3><a href="#" title="">Japanese Small Businesses</a></h3>
                 <p>These are some freelance design-2-dev projects I worked on.<br />I aimed to complete the process in less than 12 hours.</p>
