--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -50,28 +50,28 @@ FOOTER
             <h2>Casestudies</h2>
             <p>Casestudies of processes, challenges &amp; solutions from my daily work.</p>
         </div>
-        <span class="img"></span>
+        <span class="img" class="content"></span>
         <div class="content">
             <h3><a href="pages/casestudy/content-design/" title="">Conceptualising the design <br class="dt-set" /> of an au content app</a></h3>
         </div>
     </section>
 
     <section id="casestudy" class="fade casestudy">
-        <span class="img"></span>
+        <span class="img" class="initial"></span>
         <div class="content">
             <h3><a href="pages/casestudy/initial-experience/" title="">Refining the intial experience<br class="dt-set" /> of the au Tsukasapo app</a></h3>
         </div>
     </section>
 
     <section id="casestudy" class="fade casestudy">
-        <span class="img"></span>
+        <span class="img" aria-colcount="homeplus"></span>
         <div class="content">
             <h3><a href="pages/casestudy/iteration-testing/" title="">Design iteration and user testing<br class="dt-set" /> of Asurion Home+ MyPortal</a></h3>
         </div>
     </section>
 
     <section id="casestudy" class="fade casestudy flip">
-        <span class="img"></span>
+        <span class="img" class="flip"></span>
         <div class="content">
             <h3><a href="casestudy/system-ui/" title="">Flip Japan</a></h3>
         </div>
@@ -91,19 +91,19 @@ FOOTER
         </div>
         <div class="flex">
             <div class="col">
-                <span class="img"></span>
+                <span class="img" class="variables"></span>
                 <div class="content">
                     <h4><a href="pages/journal/figma-variables/" title="">Optimizing Figma variables for developer handoff</a></h4>
                 </div>
             </div>
             <div class="col">
-                <span class="img"></span>
+                <span class="img" class="inspection"></span>
                 <div class="content">
                     <h4><a href="pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
                 </div>
             </div>
             <div class="col">
-                <span class="img"></span>
+                <span class="img" class="userflow"></span>
                 <div class="content">
                     <h4><a href="pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
                 </div>
@@ -111,7 +111,7 @@ FOOTER
         </div>
     </section>
     
-    <section id="showcasevvv" class="fade casestudy">
+    <section id="showcase" class="fade casestudy">
         <div class="heading">
             <h2>Showcase</h2>
             <p>A showcase of smaller projects &amp; initiatives I have done in my free time.</p>
