--- a/ebisu/index.html
+++ b/ebisu/index.html
@@ -57,7 +57,7 @@ FOOTER
           日本税理士サービス
         </h1>
         <p>高効率な企業財務管理と安心の税務コンプライアンスを追求しますか? 当社の代理記帳サービスが理想 的な解決策です。経験豊富な会計スタッフが明瞭で正確な帳簿を保証し、日本の税理士が税務申告を担当し、すべての申告が法規に厳密に従っていることを確保します。安心して事業を運営し、財務税務の管理は私たちの専門家にお任せください。</p>
-        <a href="#" class="button" title="連絡先">連絡先</a>
+        <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" class="button" title="連絡先">連絡先</a>
       </div>
       <div class="col">
         <span class="img"></span>
@@ -161,7 +161,7 @@ FOOTER
         <p>プロフェッショナルな記帳代行と税務申告サービスを提供 し、企業の帳簿管理を効果的に支援し、税務のコンプライア ンスと税節減を行い、財務管理の心配から解放し、事業の発 展と市場の拡大により集中できるように支援します。</p>
         <p>中国から日本へ創業に来る難しさと、スタートアップ企業が 資金で直面する挑戦を理解しています。そのため、スタート アップ企業を対象にした特別優待サービスパックをご提案 し、創業初期の財務ブレッシャーを軽減し、日本での信頼で きるビジネスパートナーとなることを約束します。</p>
         <p>お問い合わせをお待ちしております!</p>
-        <a href="#" class="button" title="">連絡先</a>
+        <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" class="button" title="">連絡先</a>
       </div>
     </div>
   </section>
@@ -204,7 +204,7 @@ FOOTER
         </div>
         </div>
         <div class="col">
-          <!--a href="#" class="button outline" title="">問い合わせフォーム</a-->
+          <!--a href="#" class="button outline" title="">問い合わせ</a-->
           <p><span class="material-icons">email</span><a href="mailto:inf@8ebisu.com">inf@8ebisu.com</a></p>
           <span class="img"></span>
         </div>
