--- a/ebisu/cn/定价/index.html
+++ b/ebisu/cn/定价/index.html
@@ -19,8 +19,8 @@
   <a href="http://peteroper.github.io/portfolio/ebisu/cn/" class="logo">惠比寿会计</a>
   <nav id="mobi-menu" class="primary">
     <a href="http://peteroper.github.io/portfolio/ebisu/cn/" title="">首页</a>
-    <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" title="">定价</a>
-    <a href="http://peteroper.github.io/portfolio/ebisu/cn/联系我们/" title="" class="active">联系方式</a>
+    <a href="http://peteroper.github.io/portfolio/ebisu/cn/定价/" title="" class="active">定价</a>
+    <a href="http://peteroper.github.io/portfolio/ebisu/cn/联系我们/" title="">联系方式</a>
   </nav>
   <nav class="social">
     <a href="#" title="" class="line message">LINE</a>
@@ -38,6 +38,15 @@
   </div>
 </header>
 <!-- END -->
+<section>
+  <div class="heading">
+    <h2>Pricing</h2>
+  </div>
+  <div class="flex">
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <a href="#" class="btn"><span class="material-icon">pdf</span>Download Pricing</a>
+  </div>
+</section>
 <footer>
   <div class="copyright container">
     <p>Copyright xxx All Rights Reserved</p>
