--- a/ebisu/料金のご案内/index.html
+++ b/ebisu/料金のご案内/index.html
@@ -34,8 +34,8 @@ Sunday - 2.5hrs
     <a href="http://peteroper.github.io/portfolio/ebisu/" class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
       <a href="http://peteroper.github.io/portfolio/ebisu/" title="">ホーム</a>
-      <a href="http://peteroper.github.io/portfolio/ebisu/料金のご案内/" title="">料金のご案内</a>
-      <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" title="" class="active">お問い合わせ</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/料金のご案内/" title="" class="active">料金のご案内</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" title="">お問い合わせ</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -53,6 +53,15 @@ Sunday - 2.5hrs
     </div>
   </header>
   <!-- END -->
+  <section>
+    <div class="heading">
+      <h2>Pricing</h2>
+    </div>
+    <div class="flex">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <a href="#" class="btn"><span class="material-icon">pdf</span>Download Pricing</a>
+    </div>
+  </section>
   <footer>
     <div class="copyright container">
       <p>Copyright xxx All Rights Reserved</p>
