--- a/ebisu/en/contact/index.html
+++ b/ebisu/en/contact/index.html
@@ -48,7 +48,7 @@
         <p class="wechat message"><span>Wechat</span> ebisu8</p>
         <p class="line message"><span>LINE ID</span> ebisuacc</p>
       </div>
-      <p><span class="material-icons">email</span><a href="mailto:inf@8ebisu.com">inf@8ebisu.com</a></p>
+      <p><span class="material-icons">email</span><a href="mailto:info@ebisu-acc.co.jp">info@ebisu-acc.co.jp</a></p>
       <span class="img"></span>
     </div>
 
