--- a/ebisu/cn/index.html
+++ b/ebisu/cn/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="col">
           <!--a href="#" class="button outline" title="">咨询表单</a-->
-          <p><span class="material-icons">email</span><a href="mailto:inf@8ebisu.com">inf@8ebisu.com</a></p>
+          <p><span class="material-icons">email</span><a href="mailto:info@ebisu-acc.co.jp">info@ebisu-acc.co.jp</a></p>
           <span class="img"></span>
         </div>
       </div>
