--- a/ebisu/index.html
+++ b/ebisu/index.html
@@ -205,7 +205,7 @@ FOOTER
         </div>
         <div class="col">
           <!--a href="#" class="button outline" title="">問い合わせ</a-->
-          <p><span class="material-icons">email</span><a href="mailto:inf@8ebisu.com">inf@8ebisu.com</a></p>
+          <p><span class="material-icons">email</span><a href="mailto:info@ebisu-acc.co.jp">info@ebisu-acc.co.jp</a></p>
           <span class="img"></span>
         </div>
       </div>
