--- a/ebisu/cn/联系我们/index.html
+++ b/ebisu/cn/联系我们/index.html
@@ -37,8 +37,7 @@
     </div>
   </header>
   <!-- END -->
-  <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d12961.175388711341!2d139.69694450211992!3d35.69438590949468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1z77yR77yU4oiS77yR77yS4oiS77yX77yQ77yUIDE2MC0wMDIy!5e0!3m2!1sen!2sjp!4v1742380620538!5m2!1sen!2sjp" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.4878374996592!2d139.6979963760427!3d35.68961102951324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd088496253%3A0x25a7e143855470d4!2s5%20Chome-14-12%20Shinjuku%2C%20Shinjuku%20Ku%20Tokyo%20160-0022!5e0!3m2!1sen!2sjp!4v1743294947681!5m2!1sen!2sjp" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   <section id="contact-info" class="container flex">
     <div class="contact col">
       <h3>联系信息</h3>
