--- a/ebisu/en/contact/index.html
+++ b/ebisu/en/contact/index.html
@@ -37,7 +37,7 @@
     </div>
   </header>
   <!-- END -->
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.4878374996592!2d139.6979963760427!3d35.68961102951324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cd088496253%3A0x25a7e143855470d4!2s5%20Chome-14-12%20Shinjuku%2C%20Shinjuku%20Ku%20Tokyo%20160-0022!5e0!3m2!1sen!2sjp!4v1743294947681!5m2!1sen!2sjp" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.2892865341687!2d139.70256838675783!3d35.69449815856571!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188dd2e21f2697%3A0x4bbe6c4f33b6fdf7!2sTENSHO%20OFFICE%20Shinjuku%20Sanchome!5e0!3m2!1sen!2sjp!4v1743295235494!5m2!1sen!2sjp" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   <section id="contact-info" class="container flex">
     <div class="contact col">
       <h3>Contact Information</h3>
