--- a/ebisu/cn/定价/index.html
+++ b/ebisu/cn/定价/index.html
@@ -40,12 +40,12 @@
 <!-- END -->
 <section id="pricing">
   <div class="heading">
-    <h2>Pricing</h2>
+    <h2>定价</h2>
   </div>
-  <div class="flex">
+  <div class="container flex">
     <div class="col">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <a href="#" class="button"><span class="material-icons">pdf</span>Download Pricing</a>
+      <p>要了解我们提供的全面服务以及详细的价格信息，请下载下方的 PDF 文件。该文件包含我们服务的详细分类，确保您掌握所有必要的信息，以便做出明智的选择。</p>
+      <a href="http://peteroper.github.io/portfolio/ebisu/assets/pdf/pricing-cn.pdf" class="button"><span class="material-icons">download</span>下载 PDF</a>
     </div>
     <div class="col"> 
     </div> 
