--- a/ebisu/料金のご案内/index.html
+++ b/ebisu/料金のご案内/index.html
@@ -57,10 +57,10 @@ Sunday - 2.5hrs
     <div class="heading">
       <h2>Pricing</h2>
     </div>
-    <div class="flex">
+    <div class="container flex">
       <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a href="#" class="button"><span class="material-icons">pdf</span>Download Pricing</a>
+        <p>当社の提供するサービスの詳細と料金体系をご確認いただくために、下記のPDFをダウンロードしてください。この資料には、すべてのサービス内容が詳しく記載されており、十分な情報をもとにご判断いただけます。</p>
+        <a href="http://peteroper.github.io/portfolio/ebisu/assets/pdf/pricing-jp.pdf" class="button"><span class="material-icons">download</span>PDF をダウンロード</a>
       </div>
       <div class="col"> 
       </div> 
