--- a/ebisu/en/pricing/index.html
+++ b/ebisu/en/pricing/index.html
@@ -52,10 +52,10 @@ Sunday - 2.5hrs
     <div class="heading">
       <h2>Pricing</h2>
     </div>
-    <div class="flex">
+    <div class="container flex">
       <div class="col">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <a href="#" class="button"><span class="material-icons">pdf</span>Download Pricing</a>
+        <p>To explore our full range of services and gain a comprehensive understanding of our pricing structure, we invite you to download the detailed PDF provided below. The document includes an extensive breakdown of our offerings, ensuring you have all the information needed to make an informed decision.</p>
+        <a href="http://peteroper.github.io/portfolio/ebisu/assets/pdf/pricing-en.pdf" class="button"><span class="material-icons">download</span>Download Pricing</a>
       </div>
       <div class="col"> 
       </div> 
