--- a/ebisu/料金のご案内/index.html
+++ b/ebisu/料金のご案内/index.html
@@ -55,7 +55,7 @@ Sunday - 2.5hrs
   <!-- END -->
   <section id="pricing">
     <div class="heading">
-      <h2>Pricing</h2>
+      <h2>料金のご案内</h2>
     </div>
     <div class="container flex">
       <div class="col">
