--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -25,7 +25,7 @@ HEADER
 FOOTER
 -->
 </head>
-<body>
+<body class="page-index">
     <header>
         <div class="brand">
             <h1><span>🦊</span> Peter Roper</h1>
@@ -34,14 +34,13 @@ FOOTER
     </header>
     <!-- INTRO  -->
     <section id="intro" class="content fade">
-        
         <h2>
             Hi, I'm Peter <br />
             A British <!--🇬🇧--> Product Designer<br class="dt-set" />
             Based in Tokyo<br class="dt-set" />
             With 20+ years hands on 👋 XP
         </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
+        <p>I specialize in bridging design and execution—bringing clarity to complexity, refining processes, and ensuring great ideas translate into real, impactful outcomes.</p>
         <a href="pages/about/" class="button outline" title="">More about me</a>
     </section>
 
@@ -93,7 +92,7 @@ FOOTER
             <div class="col">
                 <span class="img" class="variables"></span>
                 <div class="content">
-                    <h4><a href="pages/journal/figma-variables/" title="">Optimizing Figma variables for developer handoff</a></h4>
+                    <h4><a href="pages/journal/figma-variables/" title="">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
                 </div>
             </div>
             <div class="col">
