--- a/boselecta/pages/about/index.html
+++ b/boselecta/pages/about/index.html
@@ -9,6 +9,8 @@
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 <meta name="theme-color" content="#346672">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
@@ -26,30 +28,65 @@ HEADER
 FOOTER
 -->
 </head>
-<body>
+<body class="page-about">
     <header>
         <div class="brand">
             <h1>Peter Roper</h1>
             <small>Product Designer</small>
         </div>
+        <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
     <section id="intro" class="content">
-        <h2>Making the hard work look easy...</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
-    </header>
-    <section id="about" class="flex">
-        <div class="col">
+        <h4>About me</h4>
+        <h2>Leading design<br /> with clarity and execution,<br /> bringing structure to complexity.</h2>
+        <p>I'm a design generalist who has evolved over a +20-year career by conscientiously refining &amp; expanding my skill set.</p>
+    </section>
+    <section id="about" class="flex container">
+        <div class="col1">
 
+            <p>Over the last five years, working within a large Japanese-US product development team, I’ve honed my process, execution, and delivery skills—focusing...... Through this, I deliver at scale, making hidden complexities look effortless.</p>
+            <p>I really enjoy the full end-to-end product cycle, helping to deliver and continuously improve great products. From a design perspective, this takes stamina and commitment beyond the initial creation phase.</p>
+            <p>That means ensuring complex flow diagrams are properly detailed for TA and QA teams, showing up prepared for regular meetings with a clear understanding of specific needs, and syncing offline when needed to keep momentum. It also involves aligning closely with development teams, inspecting released code, and ensuring everything stays true to the design intent.</p>
+            <blockquote>
+                <p>"At the core of my work is a deep focus on people—both the users we design for and the colleagues I collaborate with. I pay close attention to patterns, workflows, and interactions, ensuring every detail aligns to create a seamless experience."</p>
+            </blockquote>
+            <p>I support my team by staying hands-on—tackling the hard work, refining details, and ensuring nothing gets overlooked. I check in regularly, helping to keep momentum while making sure people feel engaged and supported. By staying adaptable and proactive, I ensure that great ideas don’t just stay ideas—they turn into real, impactful outcomes.</p>
+
+            <!--span class="img"></span-->
         </div>
-        <div class="col">
+        <div class="col2">
             <span class="img"></span>
+            <h4>Design Skills</h4>
+            <ul>
+                <li>UI Design</li>
+                <li>UX Research Process</li>
+                <li>Design Systems & Scability</li>
+                <li>Agile Product Design</li>
+                <li>Design Process</li>
+                <li>FE Development (+10yrs experience)</li>
+            </ul>
+            <h4>Personal Skills</h4>
+            <ul>
+                <li>Collaboration</li>
+                <li>Team Building</li>
+                <li>Workshops</li>
+                <li>Delivery &amp; Execution</li>
+                <li>CMS & Admin Tools</li>
+                <li>Analytics</li>
+            </ul>
         </div>
+    </section>
     <footer>
         <div class="container">
-            <h5>Collaboration Opportunities</h4>
+            <!--h5>Collaboration Opportunities</h4-->
             <h2>Let's get to work...</h2>
-            <p>I value collaborating blah blah blah</p>
-
+            <p>Great work happens when people collaborate with clarity and momentum. <br />If you need someone who can bring teams together and drive execution, let’s connect.</p>
+            <nav class="btns">
+                <a href="mailto:peter.roper.jp@gmail.com" class="button outline" title="">Email me</a>
+                <a href="https://www.linkedin.com/in/peter-roper/?originalSubdomain=jp" class="button outline" target="_blank">
+                    <i class="fa-brands fa-linkedin" style="font-size: 24px; color: #0A66C2;"></i>
+                </a>
+            </nav>
         </div>  
     </footer>
 </body>
