--- a/boselecta/pages/journal/figma-variables/index.html
+++ b/boselecta/pages/journal/figma-variables/index.html
@@ -9,6 +9,7 @@
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <meta name="theme-color" content="#346672">
 <link rel="apple-touch-icon" href="https://assets/imgs/icon-apple.jpg">
@@ -26,19 +27,20 @@ HEADER
 FOOTER
 -->
 </head>
-<body>
+<body class="page-journal">
     <!-- HEADER  -->
     <header>
         <div class="brand">
             <h1>Peter Roper</h1>
             <small>Product Designer</small>
         </div>
+        <a href="/" class="close"><span class="material-icons">close</span></a>
     </header>
-    <section id="intro" class="content casestudy">
+    <section id="intro" class="content">
         <h2>
-            Optimising Figma Variables<br /> for Developer handoff
+            Refining Figma design tokens<br /> for Developer handoff
         </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus euismod nulla sed risus congue, vel facilisis libero malesuada. Curabitur tincidunt mi a est ullamcorper.</p>
+        <p>Having worked with front-end code, I know how crucial refined and intuitive styling variables are for a smooth handoff and consistent implementation.</p>
         <a class="button" style="display: none;"></a>
     </section>
     <section class="splash">
@@ -46,10 +48,52 @@ FOOTER
             <span class="img"></span>
         </div>
     </section>
+    <section id="entry">
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>Intro</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <blockquote>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin,"</p>
+                </blockquote>
+            </div>
+            <div class="col2 col">
+                <span class="img"></span>
+            </div>
+        </div>
+        <div class="heading container">
+            <span class="img"></span>
+        </div>
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <h4>The Challenge</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+            <div class="col2 col">
+                <h4>The Solution</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+        </div> 
+        <div class="heading container">
+            <span class="img"></span>
+        </div>
+        <div class="container section1 flex">
+            <div class="col1 col">
+                <span class="img"></span>
+            </div>
+            <div class="col2 col">
+                <h4>Title</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+            </div>
+        </div>  
+        <div class="heading narrow container">
+            <span class="img"></span>
+        </div>  
+    </section>
     <footer>
         <div class="container">
             <h5>Next Casestudy</h4>
-            <h2><a href="#">Refining system UI and<br class="dt-set" /> eliminating user pain points</a>
+            <h2><a href="/pages/journal/design-inspection/">Syncing a Design inspection alongside UAT</a>
         </div>
         
     </footer>
