--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -90,19 +90,19 @@ FOOTER
         </div>
         <div class="flex">
             <div class="col">
-                <span class="img" class="variables"></span>
+                <span class="img" style="background-image: url(/assets/img/entry-variables.png);"></span>
                 <div class="content">
                     <h4><a href="pages/journal/figma-variables/" title="">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
                 </div>
             </div>
             <div class="col">
-                <span class="img" class="inspection"></span>
+                <span class="img" style="background-image: url(/assets/img/entry-inspection.png);"></span>
                 <div class="content">
                     <h4><a href="pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
                 </div>
             </div>
             <div class="col">
-                <span class="img" class="userflow"></span>
+                <span class="img" style="background-image: url(/assets/img/entry-userflow.png);"></span>
                 <div class="content">
                     <h4><a href="pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
                 </div>
@@ -113,7 +113,7 @@ FOOTER
     <section id="showcase" class="fade casestudy">
         <div class="heading">
             <h2>Showcase</h2>
-            <p>A showcase of smaller projects &amp; initiatives I have done in my free time.</p>
+            <p>A showcase of smaller initiatives I have undertaken in my free time.</p>
         </div>
         <div id="casestudy-pulse" class="col">
             <div class="img-wrap">
