--- a/boselecta/pages/journal/user-flow/index.html
+++ b/boselecta/pages/journal/user-flow/index.html
@@ -27,7 +27,7 @@ HEADER
 FOOTER
 -->
 </head>
-<body class="page-userflow">
+<body class="page-journal">
     <!-- HEADER  -->
     <header>
         <div class="brand">
@@ -43,51 +43,49 @@ FOOTER
         <p>It's easy to skip mapping user flows, but when teams have a shared visual guide, decisions get sharper, and the product comes together more smoothly.</p>
         <a class="button" style="display: none;"></a>
     </section>
-    <section class="splash">
-        <div class="container">
-            <span class="img"></span>
-        </div>
+    <section id="splash">
+            <span class="img" style="background-image: url(/assets/img/entry-userflow-top.png);"></span>
     </section>
     <section id="entry">
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>Intro</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>The Challenge</h4>
+                <p>When I joined my current company, I quickly recognized the value of the app’s 200+ screen user flow in helping me get up to speed. However, each sprint cycle required me to manually update the flow, which became a time-consuming and repetitive task. Realizing an opportunity to improve this, I applied my systemized approach to automate the process using auto-layout and a screen repository.</p>
                 <blockquote>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin,"</p>
+                    <p>"Userflows aren't glamorous, but many people rely on a userflow for a variety of tasks. When they work well, it's not seen, but when they fail, it's noticed."</p>
                 </blockquote>
             </div>
             <div class="col2 col">
-                <span class="img"></span>
+                <span class="img" style="background-image: url(/assets/img/entry-userflow-side1.png);"></span>
             </div>
         </div>
-        <div class="heading container">
-            <span class="img"></span>
+        <div class="heading narrow container">
+            <span class="img" style="background-image: url(/assets/img/entry-userflow-heading1.png);"></span>
         </div>
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>The Challenge</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>Refining the Workflow</h4>
+                <p>By streamlining the user flow updates, I automated the process of syncing changes across multiple screens, significantly reducing the time spent on manual revisions. I created a central screen repository, leveraging Figma’s library functionality to ensure consistency in variables, text, and detailing across the project. With the addition of auto-layout, the user flow and sections could evolve independently of UI changes, allowing for seamless updates when screens were adjusted. This systemized approach also kept the team aligned and minimized errors.</p>
             </div>
             <div class="col2 col">
-                <h4>The Solution</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>What This Unlocked</h4>
+                <p>This automation not only freed up valuable time for deeper design iterations but also helped maintain consistency across the project. With a central repository and Figma libraries in place, updates became more efficient, and cross-team collaboration was improved. This process allowed the design to stay aligned with the development, ensuring that the most current version was always available, and helping us focus on delivering high-quality designs and a seamless user experience."</p>
             </div>
         </div> 
         <div class="heading container">
-            <span class="img"></span>
+            <span class="img" style="background-image: url(/assets/img/entry-userflow-heading2.png);"></span>
         </div>
         <div class="container section1 flex">
             <div class="col1 col">
                 <span class="img"></span>
             </div>
             <div class="col2 col">
-                <h4>Title</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>The Invisible Work</h4>
+                <p>Often, the most valuable work goes unnoticed until it's missing. By streamlining processes, automating repetitive tasks, and ensuring consistency across design and development, I’ve freed up my team to focus on what truly matters. The time saved by refining workflows isn’t always visible, but the impact is clear—the smoother and more efficient our processes, the more space we have for creativity and problem-solving. The invisible work, like managing variables and maintaining consistency, is what makes everything else possible.</p>
             </div>
         </div>  
         <div class="heading narrow container">
-            <span class="img"></span>
+            <span class="img" style="background-image: url(/assets/img/entry-userflow-side2.png);"></span>
         </div>  
     </section>
     <footer>
