--- a/boselecta/pages/journal/design-inspection/index.html
+++ b/boselecta/pages/journal/design-inspection/index.html
@@ -43,18 +43,16 @@ FOOTER
         <p>A hands-on review of a release helps bridge the gap between design intent and final execution, ensuring smooth developer collaboration and a refined user experience.</p>
         <a class="button" style="display: none;"></a>
     </section>
-    <section class="splash">
-        <div class="container">
+    <section id="splash">
             <span class="img"></span>
-        </div>
     </section>
     <section id="entry">
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>Intro</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>What needed Fixing</h4>
+                <p>I understand the Front End coding phase well. Initially, you implement the layout to match the Figma designs, then refine and align it more closely after taking a step back. In a recent product release, I noticed some details were missed, which can happen. During UAT, these nuances often get overlooked. To ensure the product was ready for launch, I led a design inspection process, working closely with the development team to align the final implementation with the original design intent.</p>
                 <blockquote>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin,"</p>
+                    <p>"Design doesn't stop at handoff; it’s essential to see it through to implementation, ensuring the vision is realized in the final product."</p>
                 </blockquote>
             </div>
             <div class="col2 col">
@@ -66,11 +64,11 @@ FOOTER
         </div>
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>The Challenge</h4>
+                <h4>How I Approached It</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
             </div>
             <div class="col2 col">
-                <h4>The Solution</h4>
+                <h4>From Design to Delivery</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
             </div>
         </div> 
@@ -82,7 +80,7 @@ FOOTER
                 <span class="img"></span>
             </div>
             <div class="col2 col">
-                <h4>Title</h4>
+                <h4>More Than Just a Handoff</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
             </div>
         </div>  
