--- a/boselecta/pages/journal/figma-variables/index.html
+++ b/boselecta/pages/journal/figma-variables/index.html
@@ -43,18 +43,16 @@ FOOTER
         <p>Having worked with front-end code, I know how crucial refined and intuitive styling variables are for a smooth handoff and consistent implementation.</p>
         <a class="button" style="display: none;"></a>
     </section>
-    <section class="splash">
-        <div class="container">
-            <span class="img"></span>
-        </div>
+    <section id="splash">
+        <span class="img"></span>
     </section>
     <section id="entry">
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>Intro</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>Why this Matters</h4>
+                <p>I've worked as both a designer and developer, so I understand how crucial variables are for efficient scalability. But I also know they serve different purposes: designers need clear context and an understanding of what's available, while front-end developers need structured tokens and predictability to avoid second-guessing how to define values in their CSS.</p>
                 <blockquote>
-                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin,"</p>
+                    <p>"Tokens and variables aren't just technical details—they're the foundation of a strong design-dev partnership."</p>
                 </blockquote>
             </div>
             <div class="col2 col">
@@ -66,12 +64,12 @@ FOOTER
         </div>
         <div class="container section1 flex">
             <div class="col1 col">
-                <h4>The Challenge</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>Breaking It Down</h4>
+                <p>We started by aligning our design system with development practices, choosing rem values to maintain consistency with CSS. While Figma’s limitations presented some challenges, we focused on simplicity. We first defined a set of basic tokens that were easy for developers to follow, then built out more contextual variables for designers. By covering all styling variables, we removed the need for interpretation by both devs and designers, ensuring everything remained small and manageable while offering the right level of detail for visual hierarchy.</p>
             </div>
             <div class="col2 col">
-                <h4>The Solution</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>The Result</h4>
+                <p>By organizing and structuring these variables, we created a set of CSS root variables that could be applied to a web app with multiple client instances. This gave developers a streamlined, consistent foundation to work from, making implementation smoother. Applying these variables across all screen UIs was a challenging task, but it ultimately eliminated inconsistencies, ensured a cohesive design implementation, and improved collaboration between design and development teams. It also freed the design team to focus more on problem-solving and UX, rather than getting bogged down by visual design details.</p>
             </div>
         </div> 
         <div class="heading container">
@@ -82,8 +80,8 @@ FOOTER
                 <span class="img"></span>
             </div>
             <div class="col2 col">
-                <h4>Title</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Donec vel sapien at nunc suscipit tincidunt. Fusce auctor, ligula id tincidunt sollicitudin, justo velit convallis nisi, a fermentum nunc sapien at risus. Curabitur id ligula vel orci auctor malesuada. Integer a eros sed ipsum cursus convallis. Mauris nec velit et justo facilisis placerat. Suspendisse potenti. Ut in tincidunt augue, a posuere nisl.</p>
+                <h4>It's in the Details</h4>
+                <p>The careful attention to these small details meant our design vision was much more accurately realized in the final product. And perhaps most importantly, developers didn't face unnecessary friction, ensuring a collaborative and efficient process from start to finish.</p>
             </div>
         </div>  
         <div class="heading narrow container">
