--- a/boselecta/pages/journal/figma-variables/index.html
+++ b/boselecta/pages/journal/figma-variables/index.html
@@ -38,7 +38,7 @@ FOOTER
     </header>
     <section id="intro" class="content">
         <h2>
-            Refining Figma design tokens<br /> for Developer handoff
+            Refining Figma design tokens<br class="dt-set" /> for Developer handoff
         </h2>
         <p>Having worked with front-end code, I know how crucial refined and intuitive styling variables are for a smooth handoff and consistent implementation.</p>
         <a class="button" style="display: none;"></a>
