--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -40,7 +40,7 @@ FOOTER
             Based in Tokyo<br class="dt-set" />
             With 20+ years hands on 👋 XP
         </h2>
-        <p>I specialize in bridging design and execution—bringing clarity to complexity, refining processes, and ensuring great ideas translate into real, impactful outcomes.</p>
+        <p>I specialize in bridging design and execution—bringing structure to complexity, refining processes, and ensuring great ideas translate into real, impactful outcomes.</p>
         <a href="pages/about/" class="button outline" title="">More about me</a>
     </section>
 
@@ -86,7 +86,7 @@ FOOTER
     <section id="journal" class="fade casestudy">
         <div class="heading">
             <h2>Design Journal</h2>
-            <p>Journals of my day to day processes and insights.</p>
+            <p>Insights on Processes and the Daily Grind of Day to Day Design work.</p>
         </div>
         <div class="flex">
             <div class="col">
