--- a/boselecta/index.html
+++ b/boselecta/index.html
@@ -41,7 +41,7 @@ FOOTER
             With 20+ years hands on 👋 XP
         </h2>
         <p>I specialize in bridging design and execution—bringing structure to complexity, refining processes, and ensuring great ideas translate into real, impactful outcomes.</p>
-        <a href="pages/about/" class="button outline" title="">More about me</a>
+        <a href="/portfolio/boselecta/pages/about/" class="button outline" title="">More about me</a>
     </section>
 
     <section id="casestudy" class="fade casestudy">
@@ -51,7 +51,7 @@ FOOTER
         </div>
         <span class="img" class="content"></span>
         <div class="content">
-            <h3><a href="pages/casestudy/content-design/" title="">Conceptualising the design <br class="dt-set" /> of an au content app</a></h3>
+            <h3><a href="pages/casestudy/research-improvement/" title="">Improving the Claims Experience: <br class="dt-set" />Research-Backed UX and Team Growth</a></h3>
         </div>
     </section>
 
@@ -92,19 +92,19 @@ FOOTER
             <div class="col">
                 <span class="img" style="background-image: url(/assets/img/entry-variables.png);"></span>
                 <div class="content">
-                    <h4><a href="pages/journal/figma-variables/" title="">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
+                    <h4><a href="/portfolio/boselecta/pages/journal/figma-variables/" title="">Refining Figma design tokens &amp; variables for developer handoff</a></h4>
                 </div>
             </div>
             <div class="col">
                 <span class="img" style="background-image: url(/assets/img/entry-inspection.png);"></span>
                 <div class="content">
-                    <h4><a href="pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
+                    <h4><a href="/portfolio/boselecta/pages/journal/design-inspection/" title="">Syncing a Design inspection alongside UAT</a></h4>
                 </div>
             </div>
             <div class="col">
                 <span class="img" style="background-image: url(/assets/img/entry-userflow.png);"></span>
                 <div class="content">
-                    <h4><a href="pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
+                    <h4><a href="/portfolio/boselecta/pages/journal/user-flow/" title="">Automated Userflow and Screen repository for sprint project</a></h4>
                 </div>
             </div>
         </div>
