--- a/boselecta/pages/about/index.html
+++ b/boselecta/pages/about/index.html
@@ -39,18 +39,17 @@ FOOTER
     <section id="intro" class="content">
         <h4>About me</h4>
         <h2>Leading design<br /> with clarity and execution,<br /> bringing structure to complexity.</h2>
-        <p>I'm a design generalist who has evolved over a +20-year career by conscientiously refining &amp; expanding my skill set.</p>
+        <p>I'm a design generalist who has evolved over a +20-year career by continuously expanding my skill set. </p>
     </section>
     <section id="about" class="flex container">
         <div class="col1">
 
-            <p>Over the last five years, working within a large Japanese-US product development team, I’ve honed my process, execution, and delivery skills—focusing...... Through this, I deliver at scale, making hidden complexities look effortless.</p>
-            <p>I really enjoy the full end-to-end product cycle, helping to deliver and continuously improve great products. From a design perspective, this takes stamina and commitment beyond the initial creation phase.</p>
-            <p>That means ensuring complex flow diagrams are properly detailed for TA and QA teams, showing up prepared for regular meetings with a clear understanding of specific needs, and syncing offline when needed to keep momentum. It also involves aligning closely with development teams, inspecting released code, and ensuring everything stays true to the design intent.</p>
+            <p>Over the last five years, working within a large Japanese–US product development team, I’ve honed my process, execution, and delivery skills—becoming someone who supports a wide range of roles, from PMs and BAs to TAs, QAs, and developers. I’m known for getting the work done and making complex challenges appear effortless.</p>
             <blockquote>
-                <p>"At the core of my work is a deep focus on people—both the users we design for and the colleagues I collaborate with. I pay close attention to patterns, workflows, and interactions, ensuring every detail aligns to create a seamless experience."</p>
+                <p>"I value the full end-to-end product lifecycle, contributing not just to initial delivery but to long-term, continuous improvement. That takes more than skill—it takes stamina, adaptability, and ongoing commitment."</p>
             </blockquote>
-            <p>I support my team by staying hands-on—tackling the hard work, refining details, and ensuring nothing gets overlooked. I check in regularly, helping to keep momentum while making sure people feel engaged and supported. By staying adaptable and proactive, I ensure that great ideas don’t just stay ideas—they turn into real, impactful outcomes.</p>
+            <p>In my current role I have worked on a broad range of projects. In the last year I have worked on the launch of a new Asurion Home Protection service which involved responsive UI design, marketing and system-as-a-service thinking. I’ve also been a lead designer on a long-term initiative designing a popular consumer app for au, delivered in agile sprints. In parallel, I’ve supported various internal tools, including chat platforms and admin systems. These experiences have deepened my versatility as a designer, allowing me to adapt seamlessly across product types, teams, and design challenges.</p>
+            <p>At the core of my work is a deep focus on people—both the users I design for and the colleagues I collaborate with. I pay close attention to patterns and take an empathetic, considered approach to understanding feelings, uncovering needs, and creating solutions that make a meaningful difference.</p>
 
             <!--span class="img"></span-->
         </div>
@@ -67,12 +66,12 @@ FOOTER
             </ul>
             <h4>Personal Skills</h4>
             <ul>
-                <li>Collaboration</li>
-                <li>Team Building</li>
-                <li>Workshops</li>
-                <li>Delivery &amp; Execution</li>
-                <li>CMS & Admin Tools</li>
-                <li>Analytics</li>
+                <li>Pattern Recognition</li>
+                <li>Thoughtful Iteration</li>
+                <li>Collaboration &amp; Calm Influence</li>
+                <li>Grounded Leadership</li>
+                <li>Delivery & Execution</li>
+                <li>Systemic Thinking</li>
             </ul>
         </div>
     </section>
