--- a/ebisu/index.html
+++ b/ebisu/index.html
@@ -28,8 +28,8 @@ FOOTER
     <a href="http://peteroper.github.io/portfolio/ebisu/" class="logo">Ebisu Accounting</a>
     <nav id="mobi-menu" class="primary">
       <a href="http://peteroper.github.io/portfolio/ebisu/" title="" class="active">ホーム</a>
-      <a href="http://peteroper.github.io/portfolio/ebisu/料金のご案内/" title="">料金のご案内</a>
-      <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" title="">お問い合わせ</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/pricing/" title="">料金のご案内</a>
+      <a href="http://peteroper.github.io/portfolio/ebisu/contact/" title="">お問い合わせ</a>
     </nav>
     <nav class="social">
       <a href="#" title="" class="line message">LINE</a>
@@ -57,7 +57,7 @@ FOOTER
           日本税理士サービス
         </h1>
         <p>高効率な企業財務管理と安心の税務コンプライアンスを追求しますか? 当社の代理記帳サービスが理想 的な解決策です。経験豊富な会計スタッフが明瞭で正確な帳簿を保証し、日本の税理士が税務申告を担当し、すべての申告が法規に厳密に従っていることを確保します。安心して事業を運営し、財務税務の管理は私たちの専門家にお任せください。</p>
-        <a href="http://peteroper.github.io/portfolio/ebisu/お問い合わせ/" class="button" title="連絡先">連絡先</a>
+        <a href="/contact/" class="button" title="連絡先">連絡先</a>
       </div>
       <div class="col">
         <span class="img"></span>
