--- a/boselecta/pages/journal/user-flow/index.html
+++ b/boselecta/pages/journal/user-flow/index.html
@@ -34,7 +34,7 @@ FOOTER
             <h1>Peter Roper</h1>
             <small>Product Designer</small>
         </div>
-        <a href="/" class="close"><span class="material-icons">close</span></a>
+        <a href="/portfolio/boselecta/" class="close"><span class="material-icons">close</span></a>
     </header>
     <section id="intro" class="content">
         <h2>
@@ -87,11 +87,23 @@ FOOTER
         <div class="heading narrow container">
             <span class="img" style="background-image: url(/assets/img/entry-userflow-side2.png);"></span>
         </div>  
+        <div class="note">
+            <small>
+                This case study is a snapshot — I’ve kept it focused to balance work, life, and clarity. <br class="dt-set" />
+                Feel free to reach out if you'd like to learn more about the process or chat about design.
+            </small>
+            <nav class="btns sm">
+                <a href="mailto:peter.roper.jp@gmail.com" class="button md outline" title="">Email me</a>
+                <a href="https://www.linkedin.com/in/peter-roper/?originalSubdomain=jp" class="button outline" target="_blank">
+                    <i class="fa-brands fa-linkedin" style="font-size: 24px; color: #0A66C2;"></i>
+                </a>
+            </nav>
+        </div>
     </section>
     <footer>
         <div class="container">
             <h5>Next Casestudy</h4>
-            <h2><a href="/pages/journal/figma-variables/">Refining Figma design tokens &amp; variables for developer handoff</a>
+            <h2><a href="/portfolio/boselecta/pages/journal/figma-variables/">Refining Figma design tokens &amp; variables for developer handoff</a>
         </div>
         
     </footer>
